--- a/app/src/main/res/layout/activity_top.xml
+++ b/app/src/main/res/layout/activity_top.xml
@@ -3,7 +3,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:background="#1e90ff">
+                android:background="@color/PrimaryColor">
 
     <TextView
         android:layout_width="wrap_content"
