--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#E0E0E0"
-        android:textColor="#454545"
+        android:textColor="@color/TittleColor"
         android:paddingLeft="5dip"
         android:paddingTop="2dip"
         android:paddingBottom="2dip"
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:textColor="#4D4D4D"
+            android:textColor="@color/TittleColor"
             android:textSize="18dp"
             android:paddingLeft="5dip"
             android:paddingTop="10dip"
