--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:gravity="center_vertical"
-            android:textColor="#4D4D4D"
+            android:textColor="@color/TittleColor"
             android:textSize="18dp"
             android:paddingLeft="5dip"
             android:paddingTop="10dip"
