--- a/app/src/main/res/layout/page_04.xml
+++ b/app/src/main/res/layout/page_04.xml
@@ -8,7 +8,7 @@
         android:id="@+id/rl_layout"
         android:layout_width="fill_parent"
         android:layout_height="55dp"
-        android:background="#1e90ff"
+        android:background="@color/PrimaryColor"
         android:orientation="vertical">
 
         <TextView
@@ -78,7 +78,7 @@
                     android:layout_toRightOf="@id/img1"
                     android:padding="8dp"
                     android:text="白井黑子"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="18dp"/>
 
                 <TextView
@@ -88,6 +88,7 @@
                     android:layout_below="@id/StxtView1"
                     android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@id/img1"
+                    android:textColor="@color/TextColor"
                     android:padding="5dp"
                     android:text="途聆号:moon2333"
                     android:textSize="14dp"/>
@@ -117,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="收藏"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="16dp"/>
 
                 <ImageView
@@ -145,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="相册"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="16dp"/>
 
                 <ImageView
@@ -173,7 +174,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="预留"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="16dp"/>
 
                 <ImageView
@@ -201,7 +202,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="预留"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="16dp"/>
 
                 <ImageView
@@ -229,7 +230,7 @@
                     android:layout_height="wrap_content"
                     android:padding="12dp"
                     android:text="设置"
-                    android:textColor="#000"
+                    android:textColor="@color/TittleColor"
                     android:textSize="16dp"/>
 
                 <ImageView
